[workspace]
resolver = "2"
members = [
   "RsExample",
   "RsExampleUser",
   "RsSimpleSessionCostCalculator",
]

[workspace.dependencies]
# This is not used when building with cmake, but you can change this for local
# development to point to a directory that works for you to build with cargo.
everestrs = { path = "/home/zhenja/everest/everest-workspace/everest-framework/everestrs/everestrs" }
everestrs-build = { path = "/home/zhenja/everest/everest-workspace/everest-framework/everestrs/everestrs-build" }
